# NTNU_EG_internship

./: README.md  moon.txt  moon_2.txt  pyproject.toml  sun.txt
src/: Q_trafo.py  cable_current_plot.py  cable_options.py  cable_reactive_power.py  gen_network.py  line_current.py  main.py  statcom.py  statcom_variableQ.py  tap_changer_trafo.py  trafo_options.py
